# QtOCCTApp

./: .clangd  .gitignore  CMakeLists.txt  CMakeLists_test_final.txt  QWEN.md  TTT.SHX  analyze_shx.py  beam_sections_cq.py  build_log.txt  comparison_analysis.md  debug_run.bat  gen_icons.py  glyph_dump.txt  qiaodun.cpp  resources.qrc  run_app.bat  run_cq.py  run_log_debug.txt  run_log_debug_utf8.txt  run_service.bat  temp_output.brep  temp_output_0.brep  temp_output_1.brep  temp_output_2.brep  temp_output_3.brep  temp_output_4.brep  temp_output_5.brep  temp_output_6.brep  temp_output_7.brep  temp_script.py  temp_script_0.py  temp_script_1.py  temp_script_2.py  temp_script_3.py  temp_script_4.py  temp_script_5.py  temp_script_6.py  temp_script_7.py  test_api.py  test_bed_stone.py  (+6 more)
SARibbon/inc/SARibbonBar/: SARibbonBar.cpp  SARibbonMainWindow.cpp  SARibbonMainWindow.h  SARibbonSystemButtonBar.cpp
SARibbon/lib/: SARibbonBar.lib  SARibbonBard.lib
build2/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  QtOCCTApp.sln  QtOCCTApp.vcxproj  QtOCCTApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build2/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build2/Debug/: QtOCCTApp.exp  QtOCCTApp.lib  SARibbonBard.exp  SARibbonBard.lib  run_cq.py  shxparser.lib  temp_output.brep  temp_script.py
build2/Debug/cq_script/: BridgePier2.py  Chengtai.py  Pile.py  TuopanDingmao.py  bearing.py  bed_stone.py  girder.py  girder_variable.py  lightning_rod_foundation.py  temp_custom.py  temp_custom_1772260307576.py  temp_custom_1772260436825.py
build2/QtOCCTApp.dir/Debug/: QtOCCTApp.exe.recipe
build2/QtOCCTApp.dir/Release/: QtOCCTApp.exe.recipe
build2/QtOCCTApp_autogen/: mocs_compilation_Release.cpp
build2/QtOCCTApp_autogen/EWIEGA46WW_Debug/: qrc_resources.cpp
build2/Release/: QtOCCTApp.exp  QtOCCTApp.lib  run_cq.py
build2/Release/cq_script/: temp_custom.py
build2/SARibbon/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  SARibbon.sln  cmake_install.cmake
build2/SARibbon/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build2/libs/shxparser/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  ShxParser.sln  ascii_diag.vcxproj  ascii_diag.vcxproj.filters  bigfont_test.vcxproj  chinese_test.vcxproj  (+13 more)
build_trash_001/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  QtOCCTApp.sln  QtOCCTApp.vcxproj  QtOCCTApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_trash_001/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_trash_001/Debug/: QtOCCTApp.exp  QtOCCTApp.lib  shxparser.lib
build_trash_001/QtOCCTApp_autogen/: mocs_compilation_Debug.cpp
cq_script/: Chengtai.py  Dunshen.py  Pile.py  TuopanDingmao.py  bearing.py  bed_stone.py  girder.py
ifcModels/: 53-01 30 00_20m避雷针基础.ifc  53-12 20 00_GZQT-3-01_8.000.ifc
include/: AspectWindow.h  Line.h  MainWindow.h  OCCTWidget.h  PythonSyntaxHighlighter.h  ShxTextGenerator.h
libs/shxparser/: CMakeLists.txt
libs/shxparser/examples/: ascii_diag.cpp  bigfont_test.cpp  chinese_test.cpp  dual_font_test.cpp  example.cpp  mixed_test.cpp
libs/shxparser/include/: ShxParser.h
libs/shxparser/src/: ShxParser.cpp
libs/shxparser/test/: test_shx.cpp
scripts-service/: main.py  models_schema.yaml  pool_worker.py  requirements.txt  test_code.py  worker.py
scripts-service/workspace/: 0222f24f-0a4a-483b-b4eb-2436fbc2aedd.brep  0278dd03-038a-455d-bf97-dc186be0abf7.brep  04459da0-a49b-47ea-89ae-2a5bb0d082a2.brep  051e232a-a6c0-45b3-a3a0-39d0b1f0e2e9.brep  0680407b-e1e0-4761-a7fd-eb806b2d4e23.brep  078ca4e1-baf7-4e6e-a18c-e0ba5d97e752.brep  0a3d727c-947e-43f0-b1d7-9a6904675d4b.brep  0a9cec2b-5110-483c-9f8e-b507f77f7366.brep  0ec01537-0896-43d2-83e7-d35b974dfd5d.brep  0f574071-2ce1-4f23-8fc8-b648c1f9da4d.brep  1385fe2f-b8bc-46cf-a57b-821c3088c20f.brep  16aa6dd5-47fc-4589-9229-1b5d50aa38c9.brep  1bd17f09-15cf-4e90-b641-3c001ba488f5.brep  2135ec95-2fad-4b0d-b6b9-cb7fd94675c8.brep  221a8629-24a2-4954-97ee-5a8b703eb8b5.brep  24c5222a-5b5b-46cd-8c59-d0432d31a702.brep  25f28822-a3ea-43d1-9251-812a322f3076.brep  2c63dbeb-eb87-4017-82e9-f6a012279471.brep  2d4bb553-ca98-4157-9cc0-3e084f18d3d8.brep  304ab423-db29-4c8c-b900-7bdac059f326.brep  3443ef4f-e108-4da3-a752-2678f14b83f2.brep  34de9d2c-98ff-4bc4-a856-a1f0066177b5.brep  36c82980-7de5-4a09-a502-057bb3f75c7a.brep  37f1425b-9115-4756-9221-a17180916f80.brep.err  3a3dcf80-3653-4f6c-8320-e0c62475c00a.brep  3b62a146-bccc-4e93-80c2-691b8d50e9b7.brep  3c6ee7c5-cb35-4c1e-93e3-3e3c73d04566.brep  3ff24e70-fe86-4fcf-9a3e-8d0a8357cf51.brep  423531a1-372f-401f-ab7e-5918348822c3.brep  43609a1d-a14b-4cbd-a1c1-054cf9b8e506.brep  445534e5-e03b-4c69-864a-b85bc4282ca4.brep.err  4655ea4f-dd46-4134-a0f5-be21c7687a16.brep  467a2ad0-e198-44fe-b7a0-fcd2845c0961.brep.err  47365214-7320-4400-a01f-a3d34a8885f2.brep  47f40aac-91e1-4a21-9be1-1d7a6a4c5faf.brep  4a6da39a-91e3-48f0-be5f-2bd4c697314d.brep  4d26c04c-3c87-4dfa-af70-dbe5b247f3bd.brep  4ea1b540-ba8c-49b9-8cdc-00217f1f266f.brep  5178699b-10e5-4880-8715-07c21471b489.brep  51df198a-e175-4be7-b827-c2cafafc974f.brep  (+100 more)
src/: AspectWindow.cpp  Line.cpp  MainWindow.cpp  OCCTWidget.cpp  OCCTWidget.cpp.bak  PythonSyntaxHighlighter.cpp  ShxTextGenerator.cpp  main.cpp  qiaodun.cpp
temp_debug/: test_cavity.brep  test_cavity_only.brep  test_outer_only.brep
web/: index.html  package-lock.json  package.json  start_dev.bat  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
web_backup/: index.html
(+415 files in other folders)
